<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (c) 2023, Oracle and/or its affiliates.
Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>spring-cloud-oci</artifactId>
		<groupId>com.oracle.cloud.spring</groupId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>

	<artifactId>spring-cloud-oci-queue</artifactId>
	<name>Spring Cloud OCI Queue Module</name>
	<description>Spring Cloud OCI Queue Module</description>
	<url>https://github.com/oracle/spring-cloud-oci/#spring-cloud-oci-documentation</url>

	<licenses>
		<license>
			<name>The Universal Permissive License (UPL), Version 1.0</name>
			<url>https://oss.oracle.com/licenses/upl/</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>oracle</id>
			<name>Oracle</name>
			<organizationUrl>https://www.oracle.com</organizationUrl>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/oracle/spring-cloud-oci</url>
		<connection>scm:git:https://github.com/oracle/spring-cloud-oci.git</connection>
		<developerConnection>scm:git:git@github.com:oracle/spring-cloud-oci.git</developerConnection>
	</scm>

	<properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.oracle.cloud.spring</groupId>
			<artifactId>spring-cloud-oci-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.oracle.oci.sdk</groupId>
			<artifactId>oci-java-sdk-queue</artifactId>
		</dependency>
	</dependencies>
</project>
